# buildstock-query

./: .flake8  .gitignore  EULPAthena.py  EUSS-project-file-example.yml  README.md  ResStockAthena.py  ResStockSavings.py  SparkQuery.py  UpgradesAnalyzer.py  eulp_athena.py  pyproject.toml  resstock_athena.py  resstock_savings.py  setup.py  small_run_query_cache.pkl  upgrades_analyzer.py  upgrades_visualizer.py  utils.py
.github/: pull_request_template.md
.github/workflows/: testing.yml
buildstock_query/: __init__.py  aggregate_query.py  aggregate_query.pyi  base.py  core.py  eulp_athena.py  file_getter.py  helpers.py  main.py  query_core.py  report_query.py  resstock_athena.py  resstock_savings.py  savings_query.py  savings_query.pyi  upgrades_analyzer.py  upgrades_visualizer.py  utility_query.py  utility_query.pyi  utils.py
buildstock_query/assets/: styles.css
buildstock_query/db_schema/: comstock_default.toml  comstock_oedi.toml  db_schema_model.py  resstock_default.toml  resstock_oedi.toml  resstock_oedi_2025.toml  resstock_oedi_vu.toml
buildstock_query/schema/: __init__.py  helpers.py  pydantic_check.py  query_params.py  run_params.py  utiliies.py  utilities.py
buildstock_query/tools/: __init__.py  logic_parser.py  set_cover.py  upgrades_analyzer.py  upgrades_visualizer.py
docs/: aggregate_query.html  helpers.html  index.html  main.html  query_core.html  report_query.html  savings_query.html  utility_query.html
docs/db_schema/: db_schema_model.html  index.html
docs/schema/: helpers.html  index.html  query_params.html  run_params.html  utilities.html
docs/tools/: index.html  logic_parser.html  upgrades_analyzer.html  upgrades_visualizer.html
example_usage/: SLOPE data extraction.ipynb  advanced_usage.ipynb  advanced_usage_oedi.ipynb  aggregates_and_savings.ipynb  aggregates_and_savings_comstock.ipynb  aggregates_and_savings_oedi.ipynb  basic_usage.ipynb  basic_usage_comstock.ipynb  basic_usage_gas_hpwh.ipynb  basic_usage_oedi.ipynb  gashpwh_emissions.ipynb  reports.ipynb  resstock_oedi_vu.toml  upgrades_analyzer.ipynb  utility_bills_calc.ipynb  weekday_cost.csv  weekend_cost.csv
example_usage/.ipynb_checkpoints/: basic_usage-checkpoint.ipynb  basic_usage_gas_hpwh-checkpoint.ipynb
example_usage/emissions/: df_combined.csv  res_df.xlsx
tests/: generate_reference_files.py  generate_reference_savings_files.py  generate_reference_viz_data_files.py  test_BuildStockQuery.py  test_BuildStockSavings.py  test_BuildStockUtility.py  test_EULPAthena.py  test_ResStockAthena.py  test_ResStockSavings.py  test_UpgradeAnalyzer.py  test_Viz.py  test_query.py  test_set_cover.py  utils.py
(+44 files in other folders)
