[tool.poetry]
name = "buildstock_query"
version = "2022.10.8"
description = "Python library for querying and analyzing ResStock and ComStock results and input files."
authors = ["Rajendra Adhikari <Rajendra.Adhikari@nrel.gov>"]
readme = "README.md"
packages = [{include = "buildstock_query"}]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.5.0"
pyarrow = "^9.0.0"
s3fs = "2022.8.2"
boto3 = "^1.24.59"
pyathena = "2.13.0"
plotly = "^5.10.0"
dash = "^2.6.2"
SQLAlchemy = "^1.4.41"
dask = "^2022.9.2"
colorama = "^0.4.5"
dash-bootstrap-components = "^1.2.1"
dash-extensions = "^0.1.6"
dash-mantine-components = "^0.10.2"
dash-iconify = "^0.1.2"
pytest = "^7.1.3"
types-PyYAML = "^6.0.12.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
flake8 = "^5.0.4"
pdoc3 = "^0.10.0"
autopep8 = "^1.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project.urls]
"Homepage" = "https://github.com/NREL/buildstock-query"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]